# xaitimesynth

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.mk  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: docs.yml  publish.yml  pytest.yml
api/builder/: index.html
api/components/: index.html
api/datasets/: index.html
api/generators/: index.html
api/metrics/: index.html
api/registry/: index.html
api/utilities/: index.html
api/visualization/: index.html
contributing/commit-guidelines/: index.html
contributing/development-setup/: index.html
contributing/documentation/: index.html
docs/: GIT_COMMIT_GUIDELINES.md  adding_generators.md  index.md
docs/api/: builder.md  components.md  datasets.md  generators.md  metrics.md  registry.md  utilities.md  visualization.md
docs/contributing/: commit-guidelines.md  development-setup.md  documentation.md
docs/examples/: custom_generators.ipynb  data_structure.ipynb  multivariate.ipynb
docs/guides/: adding_generators.md  data_structure.md  metrics.md  overview.ipynb  overview.md  usage.md  yaml_config.md
examples/custom_generators/: index.html
notebooks/: 00_template-notebook.ipynb  xaitimesynth.ipynb  xaitimesynth_builder.ipynb
search/: search_index.json
tests/: conftest.py  test_builder.py  test_builder_functional.py  test_components.py  test_data_structures.py  test_functions.py  test_generators.py  test_generators_functional.py  test_metrics_functional.py  test_notebook_docs.py  test_parser.py  test_registry.py  test_visualization.py
xaitimesynth/: __init__.py  builder.py  components.py  data_structures.py  datasets.py  functions.py  generators.py  metrics.py  parser.py  registry.py  visualization.py
(+25 files in other folders)
