[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xaitimesynth"
dynamic = ["version"]
description = "Generate synthetic time series with known ground truth feature locations for XAI evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Gregor Baer", email = "g.baer@tue.nl" }]
keywords = ["xai", "explainability", "time-series", "synthetic-data", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "lets-plot",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "nbconvert"]
docs = ["mkdocs<2", "mkdocs-material", "mkdocs-jupyter", "mkdocstrings[python]"]
dev = [
    "xaitimesynth[test,docs]",
    "ruff",
    "pre-commit",
    "nbstripout",
    "nbdime",
]
notebooks = ["ipykernel", "ipywidgets"]

[project.urls]
Documentation = "https://gregorbaer.github.io/xaitimesynth/"
Repository = "https://github.com/gregorbaer/xaitimesynth"
Changelog = "https://github.com/gregorbaer/xaitimesynth/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "xaitimesynth/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["xaitimesynth"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", "notebooks/", "scripts/", "site/"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
